# mc_openrtm

./: CMakeLists.txt
idl/: CMakeLists.txt
projects/JVRC1/cnoid/: clear-omninames.sh  rtc.in.conf.choreonoid  sim_mc.in.cnoid  sim_mc.py
src/: MCControl.cpp  MCControl.h
